[gd_scene load_steps=21 format=3 uid="uid://dx2kglyoa8pcd"]

[ext_resource type="Script" path="res://scenes/environment/market/Market.gd" id="1_byj80"]
[ext_resource type="Texture2D" uid="uid://bsoyu1xufshc" path="res://images/environment/market/Market.png" id="1_uybai"]
[ext_resource type="FontFile" uid="uid://bxjx0s0h2yaea" path="res://extras/fonts/KdamThmorPro-Regular.ttf" id="3_ch23o"]
[ext_resource type="StyleBox" uid="uid://cc3t05y4du4x0" path="res://extras/style-boxes/SellOneButton-Hover.stylebox" id="4_mud0y"]
[ext_resource type="StyleBox" uid="uid://beg37fr5etesm" path="res://extras/style-boxes/SellOneButton-Pressed.stylebox" id="5_ojecf"]
[ext_resource type="StyleBox" uid="uid://of6esi6qlu3x" path="res://extras/style-boxes/SellOneButton-Normal.stylebox" id="6_850w7"]
[ext_resource type="StyleBox" uid="uid://csn7l2l8s5n1t" path="res://extras/style-boxes/SellAllButton-Hover.stylebox" id="7_ccqs7"]
[ext_resource type="StyleBox" uid="uid://by7ip1l0gfa45" path="res://extras/style-boxes/SellAllButton-Pressed.stylebox" id="8_w0vbp"]
[ext_resource type="StyleBox" uid="uid://ck6mxnkrurism" path="res://extras/style-boxes/SellAllButton-Normal.stylebox" id="9_ljjqc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ypp2"]
size = Vector2(132, 228)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wuksf"]
size = Vector2(80, 140)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_hqij2"]
noise_type = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_k7vuo"]
width = 80
height = 140
noise = SubResource("FastNoiseLite_hqij2")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j2i5e"]
bg_color = Color(0.270588, 0.423529, 0.435294, 0.823529)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o34uk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_et2xv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5cc7t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h3j3g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rs5py"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5sbvd"]

[node name="Market" type="StaticBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_byj80")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_uybai")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2ypp2")

[node name="Sell Zone" type="Area2D" parent="."]
position = Vector2(115, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sell Zone"]
shape = SubResource("RectangleShape2D_wuksf")
debug_color = Color(0, 0.636046, 0.409772, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="Sell Zone"]
modulate = Color(0, 0.635294, 0.407843, 0.54902)
texture = SubResource("NoiseTexture2D_k7vuo")

[node name="Line2D" type="Line2D" parent="Sell Zone/Sprite2D"]
points = PackedVector2Array(-40, -70, 40, -70, 40, 70, -40, 70, -40, -70)
width = 1.0
default_color = Color(0, 0.703612, 0.45365, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
offset_right = 480.0
offset_bottom = 565.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15

[node name="Panel" type="Panel" parent="CanvasLayer/MarginContainer"]
custom_minimum_size = Vector2(450, 550)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j2i5e")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Market" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ch23o")
theme_override_font_sizes/font_size = 36
text = "Market"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Small Scale Asteroids" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="Labels" type="HBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Small Scale Asteroids"]
layout_mode = 2

[node name="Name" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Small Scale Asteroids/Labels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ch23o")
theme_override_font_sizes/font_size = 20
text = "Small Scale Asteroids ($1/kg)"
vertical_alignment = 2

[node name="Stock" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Small Scale Asteroids/Labels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ch23o")
text = "You Have: 0"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Buttons" type="HBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Small Scale Asteroids"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2

[node name="Sell One" type="Button" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Small Scale Asteroids/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ch23o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o34uk")
theme_override_styles/hover = ExtResource("4_mud0y")
theme_override_styles/pressed = ExtResource("5_ojecf")
theme_override_styles/normal = ExtResource("6_850w7")
text = "Sell One:
$0"

[node name="Sell All" type="Button" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Small Scale Asteroids/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ch23o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_et2xv")
theme_override_styles/hover = ExtResource("7_ccqs7")
theme_override_styles/pressed = ExtResource("8_w0vbp")
theme_override_styles/normal = ExtResource("9_ljjqc")
text = "Sell ALL:
$0"

[node name="Medium Scale Asteroids" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="Labels" type="HBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Medium Scale Asteroids"]
layout_mode = 2

[node name="Name" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Medium Scale Asteroids/Labels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ch23o")
theme_override_font_sizes/font_size = 20
text = "Medium Scale Asteroids ($3/kg)"
vertical_alignment = 2

[node name="Stock" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Medium Scale Asteroids/Labels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ch23o")
text = "You Have: 0"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Buttons" type="HBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Medium Scale Asteroids"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2

[node name="Sell One" type="Button" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Medium Scale Asteroids/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ch23o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5cc7t")
theme_override_styles/hover = ExtResource("4_mud0y")
theme_override_styles/pressed = ExtResource("5_ojecf")
theme_override_styles/normal = ExtResource("6_850w7")
text = "Sell One:
$0"

[node name="Sell All" type="Button" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Medium Scale Asteroids/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ch23o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h3j3g")
theme_override_styles/hover = ExtResource("7_ccqs7")
theme_override_styles/pressed = ExtResource("8_w0vbp")
theme_override_styles/normal = ExtResource("9_ljjqc")
text = "Sell ALL:
$0"

[node name="Large Scale Asteroids" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="Labels" type="HBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Large Scale Asteroids"]
layout_mode = 2

[node name="Name" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Large Scale Asteroids/Labels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ch23o")
theme_override_font_sizes/font_size = 20
text = "Large Scale Asteroids ($10/kg)"
vertical_alignment = 2

[node name="Stock" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Large Scale Asteroids/Labels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ch23o")
text = "You Have: 0"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Buttons" type="HBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Large Scale Asteroids"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2

[node name="Sell One" type="Button" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Large Scale Asteroids/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ch23o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rs5py")
theme_override_styles/hover = ExtResource("4_mud0y")
theme_override_styles/pressed = ExtResource("5_ojecf")
theme_override_styles/normal = ExtResource("6_850w7")
text = "Sell One:
$0"

[node name="Sell All" type="Button" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/Large Scale Asteroids/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ch23o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5sbvd")
theme_override_styles/hover = ExtResource("7_ccqs7")
theme_override_styles/pressed = ExtResource("8_w0vbp")
theme_override_styles/normal = ExtResource("9_ljjqc")
text = "Sell ALL:
$0"

[connection signal="body_entered" from="Sell Zone" to="." method="_on_market_entered"]
[connection signal="body_exited" from="Sell Zone" to="." method="_on_market_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_market_deal_timer_timeout"]
